--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+Version 0.4.6 (20th November 2015)
+-------------
+* Plotting functions updated to work with latest version of ggplot2 (>= 1.0.1)
+* Argument "quietly" has been added to allow user to suppress simulation number output when running bcrm.
+* print.bcrm.sim now returns a matrix of experimented dose proportions and a vector of recommended doses
+
+
 Version 0.4.5 (23rd September 2015)
 -------------
 * The threep3 command also now returns all possible desigin in an object labelled `all.designs' for the user to interrogate further if required
